--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,30 @@
 .map {
-    height: 95vh;
+    height: 100vh;
     width: 100vw;
 }
 
-.description {
+.loading {
     font-weight: bold;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
 }
+
+.hidden {
+    display: none;
+}
+
+.sidebar {
+    background-color: rgba(35, 55, 75, 0.9);
+    color: #fff;
+    padding: 6px 12px;
+    font-family: monospace;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 12px;
+    border-radius: 4px;
+}
+
