--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@
     position: relative;
 }
 
+.not-supported {
+    height: 100%;
+    line-height: 100vh;
+    width: 100%;
+    text-align: center;
+}
+
 .loading {
     background-color: #fff;
     position: relative;
