readme update and geo actions refactor

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@
     overflow: scroll;
     scroll-behavior: smooth;
     min-width: 200px;
+    font-family: helvetica, arial, sans-serif;
 }
 
 .sidebar__list {
