--- a/src/geo/styles/Geo.css
+++ b/src/geo/styles/Geo.css
@@ -68,6 +68,7 @@
     color: #fff;
     margin-right: 12px;
     padding: 6px 12px;
+    height: 100%;
 }
 
 .month-filter__label {
@@ -84,8 +85,10 @@
 
 .fullscreen {
     background: #fff;
-    height: 30px;
+    height: 100%;
     border: 1px solid rgb(67, 67, 67);
+    border-radius: 4px;
+    max-height: 32px;
 }
 
 .fullscreen:hover {
@@ -93,7 +96,7 @@
 }
 
 .fullscreen img {
-    height: 100%;
+    height: 28px;
 }
 
 .map__popup__content {
