--- a/src/geo/styles/Geo.css
+++ b/src/geo/styles/Geo.css
@@ -3,6 +3,7 @@
     height: 100vh;
     width: 75vw;
     position: relative;
+    font-family: helvetica, arial, sans-serif;
 }
 
 .error {
@@ -76,7 +77,7 @@
 }
 
 .month-filter__label input {
-    vertical-align: text-bottom;
+    vertical-align: top;
 }
 
 .month-filter__label input:hover {
