--- a/src/geo/styles/Geo.css
+++ b/src/geo/styles/Geo.css
@@ -1,3 +1,6 @@
+/* 
+  Styles for Geo components (Map, MonthFilter, and more)
+*/
 
 .map {
     height: 100vh;
@@ -63,16 +66,21 @@
     padding: 10px;
 }
 
-.month-filter {
-    background-color: rgba(171, 64, 10, 0.9);
+.month-filter,
+.fullscreen {
+    background-color: #fff;
+    border: 1px solid #ec9f05;
     border-radius: 4px;
-    color: #fff;
-    margin-right: 12px;
-    padding: 6px 12px;
     height: 100%;
 }
 
-.month-filter__label {
+.month-filter {
+    margin-right: 12px;
+    padding: 6px 12px;
+    font-weight: bold;
+}
+
+.month-filter__label:nth-child(1) {
     margin-right: 1rem;
 }
 
@@ -85,10 +93,6 @@
 }
 
 .fullscreen {
-    background: #fff;
-    height: 100%;
-    border: 1px solid rgb(67, 67, 67);
-    border-radius: 4px;
     max-height: 32px;
 }
 
@@ -103,4 +107,5 @@
 .map__popup__content {
     margin: 10px 10px 5px 10px;
     text-align: center;
+    font-weight: bold;
 }
